<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小法机器人</string>
    <string name="placeholder">请输入要查询的内容</string>
    <string name="voice">语音输入</string>
    <!--接口地址-->
    <!--<string name="baseUrl">http://192.168.0.88:7000/api/android/law_push/</string>-->
    <string name="baseUrl">http://180.96.11.69:8500/api/android/law_push/</string>

    <!-- 听写 -->
    <string name="text_begin">请开始说话…</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>

    <!-- 合成 -->
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>河南话</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>henanese</item>
        <item>en_us</item>
    </string-array>
    <!-- 语音评测 -->
    <string name="robot">机器人</string>
    <string name="newSession">新建会话</string>
    <string-array name="ise_language_entries">
        <item>英语</item>
        <item>汉语</item>
    </string-array>
    <string-array name="ise_language_values">
        <item>en_us</item>
        <item>zh_cn</item>
    </string-array>
    <string-array name="category_entries">
        <item>单字</item>
        <item>词语</item>
        <item>句子</item>
    </string-array>
    <string-array name="category_values">
        <item>read_syllable</item>
        <item>read_word</item>
        <item>read_sentence</item>
    </string-array>
    <string-array name="result_level_entries">
        <item>plain</item>
        <item>complete</item>
    </string-array>
    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>


    <!--大数据分析资源-->
    <string name="name">咨询报告</string>
    <string name="low">法律法规</string>
    <string name="evidence">证据分析</string>
    <string name="item_case">相关案例</string>
    <string name="litigation">诉讼请求</string>
    <string name="point">司法观点</string>


    <string name="low_info_name">《最高人民法院关于审理劳动争议案件适用法律的若干问题的解释》</string>
    <string name="low_info_description">为正确审理劳动争议案件，根据《中华人民共和国劳动法》、《中华人民共和国民事诉讼法》等相关法律规定，结合民事审判实践，对人民法院审理劳动争议案件适用法律的若干问题补充解释如下:
第一条
人民法院审理劳动争议案件，对下列情形，视为劳动法第八十二条规定的“劳动争议发生之日”：
（一）在劳动关系存续期间产生的支付工资争议，用人单位能够证明已经书面通知劳动者拒付工资的，书面通知送达之日为劳动争议发生之日。用人单位不能证明的，劳动者主张权利之日为劳动争议发生之日。
（二）因解除或者终止劳动关系产生的争议，用人单位不能证明劳动者收到解除或者终止劳动关系书面通知时间的，劳动者主张权利之日为劳动争议发生之日。
（三）劳动关系解除或者终止后产生的支付工资、经济补偿金、福利待遇等争议，劳动者能够证明用人单位承诺支付的时间为解除或者终止劳动关系后的具体日期的，用人单位承诺支付之日为劳动争议发生之日。劳动者不能证明的，解除或者终止劳动关系之日为劳动争议发生之日。</string>
    <string name="litigating">诉讼流程</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="back">返回</string>
    <string name="people"> 二 维 码 </string>
    <string name="help">帮助中心</string>
    <string name="item_cost">诉讼成本</string>
    <string name="point_name">暂无指导案例</string>
    <string name="fill_name">暂无失败案例</string>
    <string name="success_name">暂无成功案例</string>
    <string name="title1">①请求给付金钱或者汇票、本票、支票、股票、债券、国库券、可转让的存款单等有价证券； ②请求给付的金钱或者有价证券已到期且数额确定，并写明了请求所根据的事实、证据；     ③债权人没有对待给付义务； 　④债务人在...</string>
    <string name="title2"> ①双方自愿，达成仲裁协议。没有仲裁协议，一方申请仲裁的，仲裁委员会不予受理。   ②有具体的仲裁请求和事实、理由； （参考法条：《中华人民共和国仲裁法》第四条）   ③属于仲裁委员会的受理范围。</string>
    <string name="title3">  ①仲裁协议   ②仲裁申请书   ③申请双方身份信息（公民：身份证、户籍证明；法人：营业执照副本、组织机构代码证、法人身份证明）   ④授权委托书及委托人身份信息（若有委托人需提供）</string>
    <string name="title4"> ①当事人约定由三名仲裁员组成仲裁庭的，应当各自选定或者各自委托仲裁委员会主任指定一名仲裁员，第三名仲裁员由当事人共同选定或者共同委托仲裁委员会主任指定。第三名仲裁员是首席仲裁员。   ②当事人约定由一名仲裁员成立仲裁庭的，应当由当事人共同选定或者共同委托仲裁委员会主任指定仲裁员。 （参考法条：《中华人民共和国仲裁法》第三十一条）</string>
    <string name="title5">仲裁员有下列情形之一的，必须回避，当事人也有权提出回避申请： 　①是本案当事人或者当事人、代理人的近亲属； 　②与本案有利害关系； 　③与本案当事人、代理人有其他关系，可能影响公正仲裁的； 　④私自会见当事人、代理人，或者接受当事人、代理人的请客送礼的。 （参考法条：《中华人民共和国仲裁法》第三十四条）</string>
    <string name="title6">仲裁委员会应当在仲裁规则规定的期限内将开庭日期通知双方当事人。当事人有正当理由的，可以在仲裁规则规定的期限内请求延期开庭。是否延期，由仲裁庭决定。（开庭程序可参考诉讼庭审程序） （参考法条：《中华人民共和国仲裁法》第四十一条）</string>
    <string name="title7">仲裁庭在作出裁决前，可以先行调解。当事人自愿调解的，仲裁庭应当调解。调解不成的，应当及时作出裁决。调解达成协议的，仲裁庭应当制作调解书或者根据协议的结果制作裁决书。调解书与裁决书具有同等法律效力。 （参考法条：《中华人民共和国仲裁法》第五十一条）</string>
    <string name="title8">仲裁实行一裁终局的制度。裁决作出后，当事人就同一纠纷再申请仲裁或者向人民法院起诉的，仲裁委员会或者人民法院不予受理。 （参考法条：《中华人民共和国仲裁法》第九条）</string>
    <string name="title9">当事人提出证据证明裁决有下列情形之一的，可以向仲裁委员会所在地的中级人民法院申请撤销裁决（应当自收到裁决书之日起六个月内提出）　　    ①没有仲裁协议的；    ②裁决的事项不属于仲裁协议的范围或者仲裁委员会无权仲裁的； 　③仲裁庭的组成或者仲裁的程序违反法定程序的； 　④裁决所根据的证据是伪造的； 　⑤对方当事人隐瞒了足以影响公正裁决的证据的； 　⑥仲裁员在仲裁该案时有索贿受贿，徇私舞弊，枉法裁决行为的。 （参考法条：《中华人民共和国仲裁法》第五十八条）</string>
    <string name="title10">一方当事人不履行裁决的，另一方当事人可以依照民事诉讼法的有关规定向人民法院申请执行。受申请的人民法院应当执行。 （参考法条：《中华人民共和国仲裁法》第六十二条）</string>
    <string name="title_activity_test_action">TestActionActivity</string>
    <string name="title_activity_guide_scene">GuideSceneActivity</string>

</resources>
