<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/item_sub_flow_linearlayout"
android:paddingLeft="60dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_gray_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="[仲裁条件]"
            android:textColor="@color/line_xy_color"
            android:textSize="26dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/item_flow_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:text="[仲裁申请书]"
        android:textColor="#0F80DC"
        android:textSize="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:maxLines="4"
        android:lineSpacingExtra="@dimen/line_space"

        android:text="@string/title2"
        android:textColor="#383838"
        android:textSize="24sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"

            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_gray_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="[提供材料]"
            android:textColor="@color/line_xy_color"
            android:textSize="26dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_flow_template1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:text="[授权委托书]"
            android:textColor="#0F80DC"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/item_flow_template2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:text="[法人(责任人)身份证明]"
            android:textColor="#0F80DC"
            android:textSize="24dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:maxLines="4"
        android:lineSpacingExtra="@dimen/line_space"
        android:text="@string/title3"
        android:textColor="#383838"
        android:textSize="24sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"

            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_gray_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="[选定仲裁员]"
            android:textColor="@color/line_xy_color"
            android:textSize="26dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:text="@string/title4"
        android:textColor="#383838"
        android:lineSpacingExtra="@dimen/line_space"
        android:textSize="24sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"

            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_gray_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="[回避]"
            android:textColor="@color/line_xy_color"
            android:textSize="26dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/item_flow_template3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:text="[回避申请书]"
        android:textColor="#0F80DC"
        android:textSize="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:text="@string/title5"
        android:lineSpacingExtra="@dimen/line_space"
        android:textColor="#383838"
        android:textSize="24sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"

            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_gray_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="[保全]"
            android:textColor="@color/line_xy_color"
            android:textSize="26dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:text="保全程序同诉讼保全，向法院申请。"
        android:textColor="#383838"
        android:textSize="24sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"

            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_gray_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="[开庭]"
            android:textColor="@color/line_xy_color"
            android:textSize="26dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/item_flow_template4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:text="[顺延期申请书]"
        android:textColor="#0F80DC"
        android:textSize="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:maxLines="4"
        android:text="@string/title6"
        android:lineSpacingExtra="@dimen/line_space"
        android:textColor="#383838"
        android:textSize="24sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"

            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_gray_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="[调解]"
            android:textColor="@color/line_xy_color"
            android:textSize="26dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:maxLines="4"
        android:lineSpacingExtra="@dimen/line_space"
        android:text="@string/title7"
        android:textColor="#383838"
        android:textSize="24sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"

            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_gray_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="[一裁终局]"
            android:textColor="@color/line_xy_color"
            android:textSize="26dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:maxLines="4"
        android:lineSpacingExtra="@dimen/line_space"
        android:text="@string/title8"
        android:textColor="#383838"
        android:textSize="24sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"

            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_gray_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="[撤销仲裁]"
            android:textColor="@color/line_xy_color"
            android:textSize="26dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/item_flow_template5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:text="[申请书（申请撤销仲裁裁决用）]"
        android:textColor="#0F80DC"
        android:textSize="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:text="@string/title9"
        android:lineSpacingExtra="@dimen/line_space"
        android:textColor="#383838"
        android:textSize="24sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"

            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_gray_bg" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="[执行]"
            android:textColor="@color/line_xy_color"
            android:textSize="26dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/item_flow_template6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:text="[执行申请书]"
        android:textColor="#0F80DC"
        android:textSize="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:lineSpacingExtra="@dimen/line_space"
        android:text="@string/title10"
        android:textColor="#383838"
        android:textSize="24sp" />

</LinearLayout>